# Multi-Core

SIMD/Green Screen/: main  main.c  readme.md
SIMD/Matrix Multiplication/: matrix_mult.c  readme.md
SIMD/SpMV/: Makefile  dense  dense.c  dense.h  input_gen.c  main.c  readme.md  sparse.c  sparse.h  sparse_omp.c  sparse_simd.c  vector.txt
SIMD/Square Root/: readme.md  rsqrt_approximation.c
SIMD/strlen/: readme.md  strlen_simd.c
Thread-safe-cache/: Makefile  readme.md
Thread-safe-cache/include/: uthash.h
Thread-safe-cache/src/: cache.c  cache.h  main.c
Thread-safe-cache/test/: generators.c  test.c  test.h  test_no_blocking_disjoint.c  test_no_blocking_reader.c  test_no_duplicate.c
sort-openmp/: CMakeLists.txt  Makefile  config.h  readme.md
sort-openmp/baseline/: baseline.c  baseline.h
sort-openmp/benches/: a.c  compare_all_bench  compare_all_bench.c  dynamic_bench_1  dynamic_bench_2  dynamic_sort_bench.c  static_bench_1  static_bench_2  static_sort_bench.c
sort-openmp/dynamic/: dynamic_qsort.c  dynamic_qsort.h
sort-openmp/my_version/: my_qsort.c  my_qsort.h
sort-openmp/static/: static_qsort.c  static_qsort.h
sort-openmp/utils/: random_gen.c  random_gen.h  util.h
